--- a/Photobox/GPhoto2/CMakeLists.txt
+++ b/Photobox/GPhoto2/CMakeLists.txt
@@ -12,3 +12,14 @@ target_link_libraries(PhotoboxGPhoto2 PUBLIC
 )
 
 target_include_directories(PhotoboxGPhoto2 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+
+target_sources(PhotoboxGPhoto2 PRIVATE 
+    GPhoto2CameraX.cpp
+    GPhoto2CameraX.hpp
+    GPhoto2Context.cpp
+    GPhoto2Context.hpp
+    GPhoto2List.cpp
+    GPhoto2List.hpp
+    GPhoto2Worker.cpp
+    GPhoto2Worker.hpp
+)
