--- a/photobox-trigger.yaml
+++ b/photobox-trigger.yaml
@@ -40,3 +40,21 @@ binary_sensor:
     filters:
       - delayed_on: 10ms
       - delayed_off: 10ms
+
+light:
+  - platform: esp32_rmt_led_strip
+    rgb_order: GRB
+    pin: GPIO10
+    num_leds: 224
+    rmt_channel: 0
+    chipset: ws2812
+    name: "StatusLight"
+    effects:
+      - addressable_random_twinkle:
+          name: IdleMode
+          twinkle_probability: 25%
+          progress_interval: 32ms
+      - addressable_rainbow:
+          name: CountdownMode
+          speed: 40
+          width: 40
