--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.30)
+cmake_minimum_required(VERSION 3.28)
 project(photobox VERSION 0.0.1 LANGUAGES CXX)
 
 set(CMAKE_PREFIX_PATH "/home/mlogemann/Qt/6.7.2/gcc_64")
@@ -13,3 +13,5 @@ pkg_check_modules(gphoto2 REQUIRED IMPORTED_TARGET libgphoto2)
 message(STATUS "Found gphoto2 ${gphoto2_VERSION}")
 
 add_subdirectory(Photobox)
+
+include(CPack)
