--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,7 @@ repos:
         files: ^.*\.cmake|CMakeLists\.txt$
       - id: end-of-file-fixer
         files: ^.*\.cmake|CMakeLists\.txt$
+      - id: check-yaml
         
   - repo: https://github.com/pre-commit/mirrors-clang-format
     rev: "v17.0.6"
@@ -17,7 +18,7 @@ repos:
     hooks:
       - id: format-qml
         name: format-qml
-        entry: qmlformat -i --objects-spacing -w 4 -l native
+        entry: qmlformat -i -l native
         types_or: ["qml"]
         pass_filenames: true
         language: system
