--- a/.github/workflows/BuildDockerImages.yml
+++ b/.github/workflows/BuildDockerImages.yml
@@ -14,8 +14,10 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ vars.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
 
       - name: Build and push
         uses: docker/build-push-action@v6
