--- a/.github/workflows/BuildCrossCompile.yml
+++ b/.github/workflows/BuildCrossCompile.yml
@@ -6,6 +6,12 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+      packages: read
+      id-token: read
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
