--- a/.github/workflows/BuildCrossCompile.yml
+++ b/.github/workflows/BuildCrossCompile.yml
@@ -1,4 +1,4 @@
-name: ci
+name: CrossCompile
 
 on:
   workflow_dispatch:
@@ -10,7 +10,6 @@ jobs:
     permissions:
       contents: read
       packages: read
-      id-token: read
 
     steps:
       - name: Checkout repository
