--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.28)
 project(photobox VERSION 0.0.1 LANGUAGES CXX)
 
-set(CMAKE_PREFIX_PATH "/home/mlogemann/Qt/6.7.2/gcc_64")
+include(CTest)
 
-find_package(Qt6 REQUIRED COMPONENTS Core Gui Qml Quick Network Multimedia REQUIRED)
+find_package(Qt6 REQUIRED COMPONENTS Core Gui Qml Quick Network Multimedia PrintSupport REQUIRED)
 qt_policy(SET QTP0001 NEW)
 
 qt_standard_project_setup()
@@ -13,6 +13,10 @@ pkg_check_modules(gphoto2 REQUIRED IMPORTED_TARGET libgphoto2)
 message(STATUS "Found gphoto2 ${gphoto2_VERSION}")
 
 add_subdirectory(Photobox)
+
+if(BUILD_TESTING)
+    add_subdirectory(Tests)
+endif()
 
 set(CPACK_PACKAGE_CONTACT "Mathis")
 set(CPACK_PACKAGE_FILE_NAME "photobox")
