--- a/Photobox/CollageEditorApp/CMakeLists.txt
+++ b/Photobox/CollageEditorApp/CMakeLists.txt
@@ -1,6 +1,6 @@
-qt_add_executable(PhotoboxApp main.cpp)
+qt_add_executable(CollageEditorApp main.cpp)
 
-target_link_libraries(PhotoboxApp PRIVATE
+target_link_libraries(CollageEditorApp PRIVATE
     Qt6::Core
     Qt6::Gui
     Qt6::Qml
@@ -13,15 +13,15 @@ target_link_libraries(PhotoboxApp PRIVATE
     PhotoboxUiplugin
 )
 
-qt_add_qml_module(PhotoboxApp
-    URI "Photobox.App"
+qt_add_qml_module(CollageEditorApp
+    URI "Photobox.CollageEditorApp"
     VERSION 1.0
     QML_FILES
       Main.qml
 )
 
 
-install(TARGETS PhotoboxApp
+install(TARGETS CollageEditorApp
     BUNDLE  DESTINATION .
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
