--- a/Photobox/CollageEditorApp/CMakeLists.txt
+++ b/Photobox/CollageEditorApp/CMakeLists.txt
@@ -6,20 +6,13 @@ target_link_libraries(CollageEditorApp PRIVATE
     Qt6::Qml
     Qt6::Quick
     Qt6::PrintSupport
+    Qt6::SvgWidgets
     PhotoboxCore
     PhotoboxCoreplugin
     PhotoboxGPhoto2
     PhotoboxGPhoto2plugin
     PhotoboxUiplugin
 )
-
-qt_add_qml_module(CollageEditorApp
-    URI "Photobox.CollageEditorApp"
-    VERSION 1.0
-    QML_FILES
-      Main.qml
-)
-
 
 install(TARGETS CollageEditorApp
     BUNDLE  DESTINATION .
