--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,9 +3,9 @@ repos:
     rev: v4.6.0
     hooks:
       - id: trailing-whitespace
-        files: ^.*\.cmake|CMakeLists\.txt$
+        files: ^.*\.cmake|CMakeLists\.txt|.*\.yml$
       - id: end-of-file-fixer
-        files: ^.*\.cmake|CMakeLists\.txt$
+        files: ^.*\.cmake|CMakeLists\.txt|.*\.yml$
       - id: check-yaml
         
   - repo: https://github.com/pre-commit/mirrors-clang-format
