--- a/Photobox/Core/CMakeLists.txt
+++ b/Photobox/Core/CMakeLists.txt
@@ -19,11 +19,14 @@ qt_add_qml_module(
         CaptureController.hpp
         CaptureController.cpp
         CollageSettings.hpp
+        CollagePrinter.hpp
+        CollagePrinter.cpp
 )
 
 target_include_directories(PhotoboxCore PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
 target_link_libraries(PhotoboxCore PUBLIC
     Qt6::Quick
+    Qt6::PrintSupport
     Qt6::Multimedia
     lunasvg
     nlohmann_json::nlohmann_json
