--- a/Photobox/Core/CMakeLists.txt
+++ b/Photobox/Core/CMakeLists.txt
@@ -21,6 +21,12 @@ qt_add_qml_module(
         CollageSettings.hpp
         CollagePrinter.hpp
         CollagePrinter.cpp
+    RESOURCES
+        Fonts/GreatVibes/GreatVibes-Regular.ttf
+        Fonts/Roboto/Roboto-Bold.ttf
+        Fonts/Roboto/Roboto-BoldItalic.ttf
+        Fonts/Roboto/Roboto-Italic.ttf
+        Fonts/Roboto/Roboto-Regular.ttf
 )
 
 target_include_directories(PhotoboxCore PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
@@ -30,4 +36,5 @@ target_link_libraries(PhotoboxCore PUBLIC
     Qt6::Multimedia
     lunasvg
     nlohmann_json::nlohmann_json
+    fmt::fmt
 )
