--- a/.github/workflows/FlatpakBuild.yml
+++ b/.github/workflows/FlatpakBuild.yml
@@ -29,6 +29,6 @@ jobs:
       - uses: flatpak/flatpak-github-actions/flatpak-builder@v6
         with:
           bundle: palette.flatpak
-          manifest-path: org.gnome.zbrown.Palette.yml
+          manifest-path: de.matnel.photobox.yml
           cache-key: flatpak-builder-${{ github.sha }}
           arch: ${{ matrix.arch }}
