allow start of app and editor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,6 +63,8 @@ if(BUILD_TESTING)
     add_subdirectory(Tests)
 endif()
 
+install(PROGRAMS launcher.sh TYPE BIN)
+
 set(CPACK_PACKAGE_CONTACT "Mathis")
 set(CPACK_PACKAGE_FILE_NAME "photobox")
 set(CPACK_RPM_SPEC_MORE_DEFINE "%define _build_id_links none")
