--- a/de.matnel.photobox.yml
+++ b/de.matnel.photobox.yml
@@ -8,6 +8,8 @@ finish-args:
   - --share=network
   - --socket=fallback-x11
   - --socket=wayland
+  - --socket=session-bus
+  - --socket=cups
   - --device=all
   - --filesystem=host
 modules:
@@ -35,7 +37,7 @@ modules:
       - -DFMT_INSTALL=ON
     sources:
       - type: git
-        url: https://github.com/fmtlib/fmt
+        url: https://github.com/fmtlib/fmt.git
         tag: 11.0.2
 
   - name: json
@@ -46,8 +48,17 @@ modules:
       - -DJSON_Install=ON
     sources:
       - type: git
-        url: https://github.com/nlohmann/json
+        url: https://github.com/nlohmann/json.git
         tag: v3.11.3
+
+  - name: libusb
+    buildsystem: autotools
+    config-opts:
+      - --disable-static
+    sources:
+      - type: git
+        url: https://github.com/libusb/libusb.git
+        tag: v1.0.27
 
   - name: gphoto2
     buildsystem: autotools
@@ -56,7 +67,7 @@ modules:
         url: https://github.com/gphoto/libgphoto2
         tag: v2.5.31
       - type: script
-        commands: ['autoreconf --install --symlink']
+        commands: ["autoreconf --install --symlink"]
 
   - name: DigitalerApp
     buildsystem: cmake-ninja
