--- a/photobox-trigger.yaml
+++ b/photobox-trigger.yaml
@@ -15,19 +15,18 @@ ota:
     password: ""
 
 wifi:
-  ssid: "photobox.matnel.de"
-  password: "photobox"
+  ssid: "photobox"
+  password: "photobox-matnel"
   fast_connect: true
+  power_save_mode: none
 
-  # Enable fallback hotspot (captive portal) in case wifi connection fails
-  ap:
-    ssid: "Photobox-Trigger"
-    password: "enWbNOQBPMXL"
-
-captive_portal:
 
 web_server:
   port: 80
+  local: true
+#  auth: 
+#    username: trigger
+#    password: triggeraA
 
 binary_sensor:
   - platform: gpio
