[no ci] fix permission error in workflow

--- a/.github/workflows/FlatpakUpdates.yml
+++ b/.github/workflows/FlatpakUpdates.yml
@@ -12,6 +12,9 @@ jobs:
       matrix:
         branch: [main] # list all branches to check
 
+    permissions:
+      pull-requests: write
+
     steps:
       - uses: actions/checkout@v4
         with:
