--- a/.github/workflows/FlatpakBuild.yml
+++ b/.github/workflows/FlatpakBuild.yml
@@ -1,8 +1,9 @@
+name: Flatpak build
 on:
   push:
     branches: [main]
-  pull_request:
-name: FlatpakBuild
+  workflow_dispatch:
+
 jobs:
   flatpak:
     name: "Flatpak"
