--- a/.github/workflows/PrValidation.yml
+++ b/.github/workflows/PrValidation.yml
@@ -9,6 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: ${{ github.repository }}/build-context
+      credentials:
+        username: ${{ github.actor }}
+        password: ${{ secrets.github_token }}
     steps:
       - uses: actions/checkout@v4
       - name: Run workflow
