--- a/.github/workflows/FlatpakUpdates.yml
+++ b/.github/workflows/FlatpakUpdates.yml
@@ -1,8 +1,8 @@
 name: Check for updates
 on:
-  schedule: # for scheduling to work this file must be in the default branch
-    - cron: "0 * * * *" # run every hour
-  workflow_dispatch: # can be manually dispatched under GitHub's "Actions" tab
+  schedule:
+    - cron: "0 0 * * *" # At 12:00 AM
+  workflow_dispatch:
 
 permissions:
   pull-requests: write
@@ -14,8 +14,7 @@ jobs:
 
     strategy:
       matrix:
-        branch: [main] # list all branches to check
-
+        branch: [main]
     steps:
       - uses: actions/checkout@v4
         with:
