try without extra image

--- a/.github/workflows/PrValidation.yml
+++ b/.github/workflows/PrValidation.yml
@@ -6,13 +6,21 @@ on:
 
 jobs:
   build-test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     container:
       image: ghcr.io/${{ github.repository }}/build-context:main
       credentials:
         username: ${{ github.actor }}
         password: ${{ secrets.github_token }}
     steps:
+      - name: Install Qt
+        uses: jurplel/install-qt-action@v4
+        with:
+          version: '6.7'
+          dir: '${{ github.workspace }}/example/'
+          install-deps: true
+          cache: true
+
       - uses: actions/checkout@v4
       - name: Run workflow
         run: cmake --workflow --preset ci
