--- a/.github/workflows/PrValidation.yml
+++ b/.github/workflows/PrValidation.yml
@@ -10,13 +10,14 @@ jobs:
 
     steps:
       - name: Install deps
-        run: sudo apt install -y ninja-build
+        run: sudo apt update && sudo apt install -y ninja-build
 
       - name: Install Qt
         uses: jurplel/install-qt-action@v4
         with:
           version: '6.7.2'
           install-deps: true
+          set-env: true
           cache: true
 
       - uses: actions/checkout@v4
