--- a/.github/workflows/PrValidation.yml
+++ b/.github/workflows/PrValidation.yml
@@ -19,7 +19,7 @@ jobs:
           install-deps: true
           set-env: true
           cache: true
-          modules: 'qtqml qtnetwork qtmultimedia qtprintsupport'
+          modules: 'qtscxml qtmultimedia'
 
       - uses: actions/checkout@v4
       - name: Run workflow
