--- a/.github/workflows/PrValidation.yml
+++ b/.github/workflows/PrValidation.yml
@@ -15,6 +15,8 @@ jobs:
         run: sudo apt update && sudo apt install -y ninja-build libgphoto2-dev
 
       - uses: hendrikmuhs/ccache-action@v1.2
+        with:
+          create-symlink: true
 
       - name: Install Qt
         uses: jurplel/install-qt-action@v4
