--- a/EspHome/photobox-camera.yaml
+++ b/EspHome/photobox-camera.yaml
@@ -1,5 +1,5 @@
 esphome:
-  name: photobox-camera-led
+  name: photobox-camera
 
 esp32:
   board: esp32-c3-devkitm-1
@@ -18,6 +18,20 @@ wifi:
   ssid: "photobox"
   password: "photobox-matnel"
   fast_connect: true
+  ap:
+    ssid: "photobox-fallback"
+    password: "photobox-matnel"
+  on_connect:
+    - light.addressable_set: 
+        id: cameraLensLed
+        green: 100%
+
+  on_disconnect:
+    - light.addressable_set: 
+        id: cameraLensLed
+        red: 100%
+
+captive_portal:
 
 web_server:
   port: 80
@@ -30,6 +44,7 @@ light:
     rmt_channel: 0
     chipset: ws2812
     name: "CameraLensLight"
+    id: cameraLensLed
     effects:
       - addressable_random_twinkle:
           name: IdleMode
