--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,23 +12,36 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMake")
 
 include(CTest)
 include(FetchContent)
+set(LUNASVG_BUILD_EXAMPLES OFF)
 FetchContent_Declare(
   lunasvg
   GIT_REPOSITORY https://github.com/sammycage/lunasvg.git
   GIT_TAG        2246b6a171bb4e64a20d793861de8f44862fed53
   FIND_PACKAGE_ARGS
 )
+set(FMT_INSTALL OFF)
+set(FMT_TEST OFF)
 FetchContent_Declare(
   fmt
   GIT_REPOSITORY https://github.com/fmtlib/fmt.git
   GIT_TAG        11.0.2
   FIND_PACKAGE_ARGS
 )
+set(JSON_BuildTests OFF)
+set(JSON_Install OFF)
 FetchContent_Declare(
     nlohmann_json
     GIT_REPOSITORY https://github.com/nlohmann/json.git
     GIT_TAG        v3.11.3
     FIND_PACKAGE_ARGS
+)
+set(STDEXEC_BUILD_TESTS OFF)
+set(STDEXEC_BUILD_EXAMPLES OFF)
+FetchContent_Declare(
+  stdexec
+  GIT_REPOSITORY https://github.com/NVIDIA/stdexec.git
+  GIT_TAG        4d8d1944126fbc17d15894341f92838ef5db66cc
+  FIND_PACKAGE_ARGS
 )
 if(BUILD_TESTING)
     FetchContent_Declare(
@@ -38,7 +51,7 @@ if(BUILD_TESTING)
         FIND_PACKAGE_ARGS
     )
 endif()
-FetchContent_MakeAvailable(lunasvg fmt nlohmann_json)
+FetchContent_MakeAvailable(stdexec lunasvg fmt nlohmann_json)
 
 
 find_package(Qt6 REQUIRED COMPONENTS Core Gui Qml Quick Network Multimedia PrintSupport REQUIRED)
@@ -49,6 +62,7 @@ find_package(fmt CONFIG REQUIRED)
 find_package(lunasvg CONFIG REQUIRED)
 find_package(nlohmann_json CONFIG REQUIRED)
 find_package(PkgConfig REQUIRED)
+find_package(stdexec CONFIG REQUIRED)
 pkg_check_modules(gphoto2 REQUIRED IMPORTED_TARGET libgphoto2)
 message(STATUS "Found gphoto2 ${gphoto2_VERSION}")
 
