move fetch content into own script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,48 +12,9 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMake")
 
 include(CTest)
 include(FetchContent)
-set(LUNASVG_BUILD_EXAMPLES OFF)
-FetchContent_Declare(
-  lunasvg
-  GIT_REPOSITORY https://github.com/sammycage/lunasvg.git
-  GIT_TAG        2246b6a171bb4e64a20d793861de8f44862fed53
-  FIND_PACKAGE_ARGS
-)
-set(FMT_INSTALL OFF)
-set(FMT_TEST OFF)
-FetchContent_Declare(
-  fmt
-  GIT_REPOSITORY https://github.com/fmtlib/fmt.git
-  GIT_TAG        11.0.2
-  FIND_PACKAGE_ARGS
-)
-set(JSON_BuildTests OFF)
-set(JSON_Install OFF)
-FetchContent_Declare(
-    nlohmann_json
-    GIT_REPOSITORY https://github.com/nlohmann/json.git
-    GIT_TAG        v3.11.3
-    FIND_PACKAGE_ARGS
-)
-set(STDEXEC_BUILD_TESTS OFF)
-set(STDEXEC_BUILD_EXAMPLES OFF)
-FetchContent_Declare(
-  stdexec
-  GIT_REPOSITORY https://github.com/NVIDIA/stdexec.git
-  GIT_TAG        4d8d1944126fbc17d15894341f92838ef5db66cc
-  FIND_PACKAGE_ARGS
-)
-if(BUILD_TESTING)
-    set(CATCH_INSTALL_DOCS OFF)
-    FetchContent_Declare(
-        Catch2
-        GIT_REPOSITORY https://github.com/catchorg/Catch2.git
-        GIT_TAG        v3.7.1
-        FIND_PACKAGE_ARGS
-    )
-endif()
-FetchContent_MakeAvailable(stdexec lunasvg fmt nlohmann_json)
+include(Dependencies)
 
+declare_photobox_dependencies()
 
 find_package(Qt6 REQUIRED COMPONENTS Core Gui Qml Quick Network Multimedia PrintSupport REQUIRED)
 qt_policy(SET QTP0001 NEW)
