--- a/EspHome/photobox-camera.yaml
+++ b/EspHome/photobox-camera.yaml
@@ -17,21 +17,19 @@ ota:
 wifi:
   ssid: "photobox"
   password: "photobox-matnel"
-  fast_connect: true
-  ap:
-    ssid: "photobox-fallback"
-    password: "photobox-matnel"
   on_connect:
     - light.addressable_set: 
         id: cameraLensLed
-        green: 100%
+        red: 0%
+        green: 20%
+        blue: 0%
 
   on_disconnect:
     - light.addressable_set: 
         id: cameraLensLed
-        red: 100%
-
-captive_portal:
+        red: 20%
+        green: 0%
+        blue: 0%
 
 web_server:
   port: 80
@@ -46,11 +44,13 @@ light:
     name: "CameraLensLight"
     id: cameraLensLed
     effects:
-      - addressable_random_twinkle:
-          name: IdleMode
-          twinkle_probability: 5%
-          progress_interval: 32ms
-      - addressable_rainbow:
-          name: CountdownMode
-          speed: 40
-          width: 40
+      - pulse:
+          name: Pulsate
+          transition_length: 0.2s
+          update_interval: 0.2s
+          min_brightness: 0%
+          max_brightness: 100%
+      - addressable_scan:
+          name: Capture
+          scan_width: 3
+          move_interval: 50ms
