Esphome improvements & intitial CameraLed (#9)
* improve esphome

* remove cpack

* improve flatpak options

* add stdexec

* improve flatpak options

* move fetch content into own script

* remove stdexec for now

* add svg font cache

* add camera led

* remove stdexec from deps

* add missing includes

* update lunasvg

--- a/Photobox/Core/CMakeLists.txt
+++ b/Photobox/Core/CMakeLists.txt
@@ -21,6 +21,10 @@ qt_add_qml_module(
         CollagePrinter.cpp
         RemoteTrigger.cpp
         RemoteTrigger.hpp
+        CameraLed.cpp
+        CameraLed.hpp
+        SvgFontCache.hpp
+        SvgFontCache.cpp
     RESOURCES
         Fonts/GreatVibes/GreatVibes-Regular.ttf
         Fonts/Roboto/Roboto-Bold.ttf
