--- a/Photobox/CMakeLists.txt
+++ b/Photobox/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory(Ui)
 add_subdirectory(GPhoto2)
 add_subdirectory(App)
 add_subdirectory(CollageEditorApp)
+add_subdirectory(SignalTracer)
