--- a/Photobox/App/CMakeLists.txt
+++ b/Photobox/App/CMakeLists.txt
@@ -6,6 +6,7 @@ target_link_libraries(PhotoboxApp PRIVATE
     Qt6::Qml
     Qt6::Quick
     Qt6::PrintSupport
+    cpptrace::cpptrace
     PhotoboxCore
     PhotoboxCoreplugin
     PhotoboxGPhoto2
