--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -7,12 +7,14 @@ add_executable(tests
     TestEspHomeRemoteTrigger.cpp
     pixel_match.cpp
     pixel_match.hpp
+    GPhoto2IntegrationTest.cpp
 )
 target_link_libraries(tests PRIVATE
     Qt6::Test
     Catch2::Catch2
     PhotoboxCore
     PhotoboxPeripheral
+    PhotoboxGPhoto2
 )
 target_include_directories(tests PRIVATE "${CMAKE_CURRENT_BINARY_DIR}")
 catch_discover_tests(tests)
