--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -1,5 +1,7 @@
-find_package(Catch2 3 REQUIRED)
 find_package(Qt6 REQUIRED COMPONENTS Test)
+find_package(Catch2 3 CONFIG REQUIRED)
+list(APPEND CMAKE_MODULE_PATH "${Catch2_SOURCE_DIR}/extras")
+include(Catch)
 
 add_executable(tests
     main.cpp
