switch to lunasvg releases

--- a/de.matnel.photobox.yml
+++ b/de.matnel.photobox.yml
@@ -25,13 +25,11 @@ modules:
     sources:
       - type: git
         url: https://github.com/sammycage/plutovg.git
-        commit: 1e6a362b0e2b66a2cbc6d8af662a5a8a95d0e7b7
-        branch: main
+        tag: v0.0.9
         dest: deps/plutovg
       - type: git
         url: https://github.com/sammycage/lunasvg.git
-        commit: c7889a00156bd50ab8daebb38f17b63725395c91
-        branch: master
+        tag: v3.0.1
 
   - name: fmt
     buildsystem: cmake-ninja
