Add GPhoto2Exception for special cases (memory allocation failed etc.)

--- a/Photobox/GPhoto2/CMakeLists.txt
+++ b/Photobox/GPhoto2/CMakeLists.txt
@@ -10,17 +10,11 @@ target_link_libraries(PhotoboxGPhoto2 PUBLIC
 target_include_directories(PhotoboxGPhoto2 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 target_sources(PhotoboxGPhoto2 PRIVATE
-    #GPhoto2CameraImpl.cpp
-    #GPhoto2CameraImpl.hpp
     GPhoto2Context.cpp
     GPhoto2Context.hpp
-    #GPhoto2List.cpp
-    #GPhoto2List.hpp
-    #GPhoto2Worker.cpp
-    #GPhoto2Worker.hpp
-
     GPhoto2Wrapper.hpp
     GPhoto2Wrapper.cpp
     GPhoto2Integration.hpp
     GPhoto2Integration.cpp
+    GPhoto2Exeption.hpp
 )
