--- a/.github/workflows/PrValidation.yml
+++ b/.github/workflows/PrValidation.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install deps
-        run: sudo apt update && sudo apt install -y ninja-build libgphoto2-dev libunwind-dev
+        run: sudo apt update && sudo apt install -y ninja-build libgphoto2-dev libunwind-dev libicu-dev
 
       - uses: hendrikmuhs/ccache-action@v1.2
         with:
