--- a/.github/workflows/FlatpakBuild.yml
+++ b/.github/workflows/FlatpakBuild.yml
@@ -9,25 +9,30 @@ jobs:
     name: "Flatpak"
     runs-on: ubuntu-latest
     container:
-      image: bilelmoussaoui/flatpak-github-actions:kde-6.7
+      image: ghcr.io/flathub-infra/flatpak-github-actions:kde-6.8
       options: --privileged
     strategy:
       matrix:
         arch: [x86_64, aarch64]
+      # Don't fail the whole workflow if one architecture fails
       fail-fast: false
     steps:
       - uses: actions/checkout@v4
+      # Docker is required by the docker/setup-qemu-action which enables emulation
       - name: Install deps
         if: ${{ matrix.arch != 'x86_64' }}
         run: |
-          dnf -y install docker
+          # Use the static binaries because it's unable to use a package manager
+          curl https://download.docker.com/linux/static/stable/x86_64/docker-27.3.1.tgz --output ./docker.tgz
+          tar xzvf docker.tgz
+          mv docker/* /usr/bin
       - name: Set up QEMU
         if: ${{ matrix.arch != 'x86_64' }}
         id: qemu
         uses: docker/setup-qemu-action@v3
         with:
           platforms: arm64
-      - uses: flatpak/flatpak-github-actions/flatpak-builder@v6
+      - uses: flathub-infra/flatpak-github-actions/flatpak-builder@master
         with:
           bundle: photobox.flatpak
           manifest-path: de.matnel.photobox.yml
