--- a/.github/workflows/PrValidation.yml
+++ b/.github/workflows/PrValidation.yml
@@ -5,7 +5,7 @@ on:
 name: Build and test
 jobs:
   flatpak:
-    name: "Flatpak"
+    name: "Build flatpak and run tests"
     runs-on: ubuntu-latest
     container:
       image: bilelmoussaoui/flatpak-github-actions:kde-6.7
