--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,7 +18,7 @@ repos:
     hooks:
       - id: format-qml
         name: format-qml
-        entry: qmlformat -i -l native
+        entry: /home/mathis/Qt/6.8.0/gcc_64/bin/qmlformat -i -l native
         types_or: ["qml"]
         pass_filenames: true
         language: system
