--- a/Photobox/Core/CMakeLists.txt
+++ b/Photobox/Core/CMakeLists.txt
@@ -34,6 +34,10 @@ qt_add_qml_module(
         ICaptureSession.hpp
         CollageCaptureSession.hpp
         CollageCaptureSession.cpp
+        SystemStatusModel.cpp
+        SystemStatusModel.hpp
+        SystemStatus.hpp
+        SystemStatus.cpp
     RESOURCES
         Fonts/GreatVibes/GreatVibes-Regular.ttf
         Fonts/Roboto/Roboto-Bold.ttf
