--- a/Photobox/Ui/CMakeLists.txt
+++ b/Photobox/Ui/CMakeLists.txt
@@ -6,7 +6,7 @@ qt_add_qml_module(
         Countdown.qml
         PreviewImage.qml
         BusyPage.qml
-        SystemStatus.qml
+        SystemStatusDelegate.qml
         StatusPage.qml
         CapturePage.qml
     RESOURCES
